[gd_scene load_steps=7 format=3 uid="uid://bgnsh65i6hipk"]

[ext_resource type="Script" uid="uid://bg6ao5ny44wm1" path="res://Characters/Enemies/enemy.gd" id="1_3em64"]
[ext_resource type="PackedScene" uid="uid://b3tlagt4bytaq" path="res://Characters/Players/rig.tscn" id="2_oj6d0"]
[ext_resource type="PackedScene" uid="uid://dd7o6kupbvt0g" path="res://Characters/Components/health_component.tscn" id="3_oooen"]
[ext_resource type="PackedScene" uid="uid://dbriisr12w1be" path="res://Characters/Players/area_attack.tscn" id="4_p6hek"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o8ynm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oooen"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 9
script = ExtResource("1_3em64")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_o8ynm")

[node name="Rig" parent="." instance=ExtResource("2_oj6d0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Skeleton3D" parent="Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(6.82934e-15, 0.895389, -0.0481735)
bones/2/rotation = Quaternion(-0.00294022, -0.000433884, 0.00321514, 0.99999)
bones/3/rotation = Quaternion(-0.097465, -0.00039273, 0.00851942, 0.995202)
bones/4/rotation = Quaternion(0.278039, 1.46807e-08, 9.41165e-08, 0.96057)
bones/6/rotation = Quaternion(-0.154978, -1.17631e-07, -1.93557e-08, 0.987918)
bones/7/position = Vector3(-2.6514e-08, 0.895389, -0.0481735)
bones/8/position = Vector3(-4.69457e-08, 0.895389, -0.0481735)
bones/9/position = Vector3(0.131144, 0.961593, -0.0351291)
bones/9/rotation = Quaternion(0.99281, 0.0209775, -0.0308997, 0.113721)
bones/11/rotation = Quaternion(0.425016, -0.000700656, 0.000329139, 0.905186)
bones/13/rotation = Quaternion(-0.753662, 0.0118931, 0.0244153, 0.656701)
bones/15/position = Vector3(-0.131144, 0.961593, -0.0351291)
bones/15/rotation = Quaternion(0.972683, -0.00587851, 0.0272551, 0.230458)
bones/17/rotation = Quaternion(0.448766, 0.00331827, -0.00166648, 0.893641)
bones/19/rotation = Quaternion(-0.69016, -0.028203, -0.000593342, 0.723107)
bones/21/position = Vector3(0.0251286, 1.42564, 0.0418158)
bones/21/rotation = Quaternion(-0.495662, -0.257008, -0.398322, 0.72774)
bones/22/position = Vector3(0.188165, 1.46223, -0.0254189)
bones/22/rotation = Quaternion(0.0530688, -0.159198, 0.974272, -0.150446)
bones/23/rotation = Quaternion(7.58737e-08, -0.0133321, 9.29686e-09, 0.999911)
bones/24/rotation = Quaternion(0.292992, -0.0133328, -0.017823, 0.955856)
bones/46/position = Vector3(-0.0113635, 1.42564, 0.0418158)
bones/46/rotation = Quaternion(-0.516436, 0.214719, 0.369362, 0.742133)
bones/47/position = Vector3(-0.165636, 1.46261, -0.0434619)
bones/47/rotation = Quaternion(-0.0834809, -0.135409, 0.972537, 0.169905)
bones/48/rotation = Quaternion(-7.07539e-08, 0.0079374, -1.12268e-07, 0.999969)
bones/49/rotation = Quaternion(0.324939, 0.00793785, 0.0288683, 0.945261)
bones/71/position = Vector3(0.127191, 1.34379, -0.0265725)
bones/71/rotation = Quaternion(1.9199e-08, 0.614643, 0.788806, -4.64777e-08)
bones/72/position = Vector3(-0.113426, 1.34379, -0.0265725)
bones/72/rotation = Quaternion(1.92043e-08, 0.614566, 0.788866, -4.64746e-08)

[node name="Knight_02" parent="Rig/CharacterRig/GameRig/Skeleton3D" index="1"]
visible = false

[node name="Villager_01" parent="Rig/CharacterRig/GameRig/Skeleton3D" index="2"]
visible = true

[node name="RightHandBone" parent="Rig/CharacterRig" index="2"]
transform = Transform3D(-0.962343, -0.270803, -0.0237133, 0.242856, -0.895654, 0.372594, -0.122138, 0.352804, 0.927691, -0.339453, 0.979491, -0.0357642)

[node name="LeftHandBone" parent="Rig/CharacterRig" index="3"]
transform = Transform3D(-0.970513, 0.239108, 0.0305211, -0.222754, -0.938024, 0.265503, 0.0921137, 0.250876, 0.963626, 0.344975, 0.967982, -0.0529295)

[node name="PlayerDetecter" type="ShapeCast3D" parent="Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oooen")
target_position = Vector3(0, 0, 1)
collision_mask = 4

[node name="HealthComponent" parent="." instance=ExtResource("3_oooen")]

[node name="AreaAttack" parent="." instance=ExtResource("4_p6hek")]
target_position = Vector3(0, 0, 1)
collision_mask = 4

[connection signal="heavy_attack" from="Rig" to="." method="_on_rig_heavy_attack"]
[connection signal="defeat" from="HealthComponent" to="." method="_on_health_component_defeat"]

[editable path="Rig"]
[editable path="Rig/CharacterRig"]
